--- a/Scheduling_algorithms.ipynb
+++ b/Scheduling_algorithms.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -24,8 +24,9 @@
    "source": [
     "class Process:\n",
     "    \n",
-    "    def __init__ ( self, arrival_time, burst_time, priority ) :\n",
+    "    def __init__ ( self, pid, arrival_time, burst_time, priority ) :\n",
     "        \n",
+    "        self.pid = pid\n",
     "        self.arrival_time = arrival_time\n",
     "        self.burst_time = burst_time\n",
     "        self.priority = priority\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -55,12 +56,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Enter the number of processes"
+    "####  Getting the number of processes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -80,11 +81,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Getting info for the processes list"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -93,21 +96,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Arrival time for pid 1\n",
       "4\n",
+      "Burst time for pid 1\n",
+      "3\n",
+      "Priority for pid 1\n",
+      "2\n",
+      "Arrival time for pid 2\n",
+      "1\n",
+      "Burst time for pid 2\n",
       "4\n",
-      "1\n"
+      "Priority for pid 2\n",
+      "3\n",
+      "Arrival time for pid 3\n",
+      "2\n",
+      "Burst time for pid 3\n",
+      "3\n",
+      "Priority for pid 3\n",
+      "2\n"
      ]
     }
    ],
    "source": [
-    "for _ in range(x) :\n",
-    "    a = raw_input()"
+    "for i in range(x) :\n",
+    "    \n",
+    "    print \"Arrival time for pid\", (i+1)\n",
+    "    a_t = int(raw_input())\n",
+    "    \n",
+    "    print \"Burst time for pid\", (i+1)\n",
+    "    b_t = int(raw_input())\n",
+    "    \n",
+    "    print \"Priority for pid\", (i+1)\n",
+    "    pri = int(raw_input())\n",
+    "    \n",
+    "    proc = Process((i+1), a_t, b_t, pri) # creating a instance of the class\n",
+    "    \n",
+    "    processes_list.append(proc) #adding each new instance to the list"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## First come First Serve Algorithm ( FCFS )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#make new proc list copy\n",
+    "while True :\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
