--- a/Page_replacement_algorithm.ipynb
+++ b/Page_replacement_algorithm.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,8 @@
       "List :  [4, 1, 0]  Current page : 0\n",
       "List :  [4, 1, 0]  Current page : 2\n",
       "List :  [4, 1, 2]  Current page : 1\n",
-      "9\n"
+      "\n",
+      "Number of page faults =  9\n"
      ]
     }
    ],
@@ -85,7 +86,7 @@
     "        \n",
     "    cur_ref_str_pos += 1\n",
     "    \n",
-    "print (\"Number of page faults = \", fcfs_page_fault)"
+    "print (\"\\nNumber of page faults = \", fcfs_page_fault)"
    ]
   },
   {
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +115,8 @@
       "List :  [4, 1, 0]  Current page : 0\n",
       "List :  [4, 1, 0]  Current page : 2\n",
       "List :  [4, 1, 2]  Current page : 1\n",
-      "9\n"
+      "\n",
+      "Number of page faults =  9\n"
      ]
     }
    ],
@@ -158,7 +160,7 @@
     "    \n",
     "    cur_ref_str_pos += 1\n",
     "\n",
-    "print(\"Number of page faults = \",lru_page_fault)"
+    "print(\"\\nNumber of page faults = \",lru_page_fault)"
    ]
   },
   {
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +189,8 @@
       "List :  [4, 2, 1]  Current page : 0\n",
       "List :  [0, 2, 1]  Current page : 2\n",
       "List :  [0, 2, 1]  Current page : 1\n",
-      "8\n"
+      "\n",
+      "Number of page faults =  8\n"
      ]
     }
    ],
@@ -221,18 +224,9 @@
     "        \n",
     "    cur_ref_str_pos += 1\n",
     "\n",
-    "print (\"Number of page faults = \", lfu_page_fault )\n",
+    "print (\"\\nNumber of page faults = \", lfu_page_fault )\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
